--- a/apps/web/src/styles/index.css
+++ b/apps/web/src/styles/index.css
@@ -68,9 +68,9 @@
  
 @layer base {
   * {
-    @apply çborder-border;
+    @apply border-border;
   }
   body {
-    @apply çbg-background çtext-foreground;
+    @apply bg-background text-foreground;
   }
 }
